more pjcts and vid

--- a/css/diy-kits.css
+++ b/css/diy-kits.css
@@ -1,233 +1,955 @@
 .html
 {
-	background-color: #FFFFFF;
+	background-color: #7F7F7F;
 }
 
 #page
 {
 	z-index: 1;
 	width: 960px;
-	min-height: 282px;
+	min-height: 1764.8572058376408px;
 	background-image: none;
-	border-style: none;
+	border-width: 1px;
+	border-style: solid;
 	border-color: #000000;
 	background-color: #FFFFFF;
-	padding-bottom: 530px;
+	padding-bottom: 0px;
 	margin-left: auto;
 	margin-right: auto;
 }
 
-#u1039-5
+#page_position_content
+{
+	margin-bottom: 251px;
+}
+
+#pu3551
+{
+	width: 0.01px;
+	margin-left: 20px;
+	position: relative;
+}
+
+#u3551
+{
+	z-index: 63;
+	width: 920px;
+	height: 20px;
+	margin-right: -10000px;
+}
+
+#u3552
+{
+	z-index: 64;
+	width: 920px;
+	margin-right: -10000px;
+	margin-top: 17px;
+}
+
+._u3552.f3s_top
+{
+	height: 75px;
+	width: 920px;
+	padding-bottom: 2px;
+}
+
+#u3553
+{
+	z-index: 65;
+	width: 97px;
+	margin-right: -10000px;
+	margin-top: -2px;
+	left: 23px;
+}
+
+#u3553_img
+{
+	padding-right: 1px;
+	padding-bottom: 1px;
+}
+
+#menuu3557
+{
+	z-index: 69;
+	width: 334px;
+	margin-right: -10000px;
+	margin-top: 41px;
+	left: 540px;
+}
+
+#u3606
+{
+	width: 56px;
+	min-height: 34px;
+	margin-right: -10000px;
+}
+
+#u3609
+{
+	z-index: 72;
+	width: 56px;
+	height: 34px;
+	margin-right: -10000px;
+}
+
+#pu3609:hover ._u3609.f3s_top
+{
+	height: 34px;
+	width: 56px;
+}
+
+#pu3609:active ._u3609.f3s_top
+{
+	height: 34px;
+	width: 56px;
+}
+
+#pu3609.MuseMenuActive ._u3609.f3s_top
+{
+	height: 34px;
+	width: 56px;
+}
+
+#u3610-4
+{
+	width: 34px;
+	min-height: 19px;
+	margin-right: -10000px;
+	top: 7px;
+	left: 11px;
+}
+
+#pu3609:hover #u3610-4,#pu3609:active #u3610-4,#pu3609.MuseMenuActive #u3610-4
+{
+	margin-right: -10000px;
+	top: 7px;
+	left: 11px;
+}
+
+#pu3609:hover #u3609,#pu3609:active #u3609,#pu3609.MuseMenuActive #u3609
+{
+	width: 56px;
+	margin-right: -10000px;
+	margin-top: 0px;
+	left: 0px;
+	margin-left: 0px;
+}
+
+#u3613
+{
+	width: 88px;
+	min-height: 34px;
+	margin-right: -10000px;
+	left: 58px;
+}
+
+#u3637
+{
+	z-index: 82;
+	width: 88px;
+	height: 34px;
+	margin-right: -10000px;
+}
+
+#pu3637:hover ._u3637.f3s_top
+{
+	height: 34px;
+	width: 88px;
+}
+
+#pu3637:active ._u3637.f3s_top
+{
+	height: 34px;
+	width: 88px;
+}
+
+#pu3637.MuseMenuActive ._u3637.f3s_top
+{
+	height: 34px;
+	width: 88px;
+}
+
+#u3638-4
+{
+	width: 67px;
+	min-height: 19px;
+	margin-right: -10000px;
+	top: 7px;
+	left: 10px;
+}
+
+#pu3637:hover #u3637,#pu3637:active #u3637,#pu3637.MuseMenuActive #u3637
+{
+	width: 88px;
+	margin-right: -10000px;
+	margin-top: 0px;
+	left: 0px;
+	margin-left: 0px;
+}
+
+#u3614
+{
+	width: 147px;
+	top: 34px;
+}
+
+#u3631
+{
+	z-index: 94;
+	width: 147px;
+	margin-right: -10000px;
+}
+
+._u3631.f3s_top
+{
+	height: 23px;
+	width: 147px;
+}
+
+#pu3631:hover ._u3631.f3s_top
+{
+	height: 23px;
+	width: 147px;
+}
+
+#u3634-4
+{
+	width: 117px;
+	min-height: 13px;
+	padding-left: 2px;
+	padding-top: 4px;
+	padding-right: 2px;
+	margin-right: -10000px;
+	top: 3px;
+	left: 11px;
+}
+
+#pu3631:hover #u3634-4,#pu3631.MuseMenuActive #u3634-4
+{
+	margin-right: -10000px;
+	top: 3px;
+	left: 11px;
+}
+
+#u3619
+{
+	z-index: 103;
+	width: 147px;
+	margin-right: -10000px;
+}
+
+#pu3631.MuseMenuActive ._u3631.f3s_top,._u3619.f3s_top
+{
+	height: 23px;
+	width: 147px;
+}
+
+#pu3619:hover ._u3619.f3s_top
+{
+	height: 23px;
+	width: 147px;
+}
+
+#u3622-4
+{
+	width: 131px;
+	min-height: 13px;
+	padding-left: 2px;
+	padding-top: 4px;
+	padding-right: 2px;
+	margin-right: -10000px;
+	top: 3px;
+	left: 4px;
+}
+
+#pu3619:hover #u3622-4,#pu3619.MuseMenuActive #u3622-4
+{
+	margin-right: -10000px;
+	top: 3px;
+	left: 4px;
+}
+
+#u3615,#u3630,#u3616,#u3623
+{
+	width: 147px;
+}
+
+#u3624
+{
+	z-index: 112;
+	width: 147px;
+	margin-right: -10000px;
+}
+
+#pu3619.MuseMenuActive ._u3619.f3s_top,._u3624.f3s_top
+{
+	height: 23px;
+	width: 147px;
+}
+
+#pu3624:hover ._u3624.f3s_top
+{
+	height: 23px;
+	width: 147px;
+}
+
+#pu3624.MuseMenuActive ._u3624.f3s_top
+{
+	height: 23px;
+	width: 147px;
+}
+
+#u3625-4
+{
+	width: 28px;
+	min-height: 13px;
+	padding-left: 2px;
+	padding-top: 4px;
+	padding-right: 2px;
+	margin-right: -10000px;
+	top: 3px;
+	left: 55px;
+}
+
+#pu3624:hover #u3625-4,#pu3624.MuseMenuActive #u3625-4
+{
+	margin-right: -10000px;
+	top: 3px;
+	left: 55px;
+}
+
+#pu3631:hover #u3631,#pu3631.MuseMenuActive #u3631,#pu3619:hover #u3619,#pu3619.MuseMenuActive #u3619,#pu3624:hover #u3624,#pu3624.MuseMenuActive #u3624
+{
+	width: 147px;
+	margin-right: -10000px;
+	margin-top: 0px;
+	left: 0px;
+	margin-left: 0px;
+}
+
+#u3558
+{
+	width: 80px;
+	min-height: 34px;
+	margin-right: -10000px;
+	left: 148px;
+}
+
+#u3559
+{
+	z-index: 121;
+	width: 80px;
+	height: 34px;
+	margin-right: -10000px;
+}
+
+#pu3559:hover ._u3559.f3s_top
+{
+	height: 34px;
+	width: 80px;
+}
+
+#pu3559:active ._u3559.f3s_top
+{
+	height: 34px;
+	width: 80px;
+}
+
+#pu3559.MuseMenuActive ._u3559.f3s_top
+{
+	height: 34px;
+	width: 80px;
+}
+
+#u3560-4
+{
+	width: 59px;
+	min-height: 19px;
+	margin-right: -10000px;
+	top: 7px;
+	left: 10px;
+}
+
+#pu3559:hover #u3559,#pu3559:active #u3559,#pu3559.MuseMenuActive #u3559
+{
+	width: 80px;
+	margin-right: -10000px;
+	margin-top: 0px;
+	left: 0px;
+	margin-left: 0px;
+}
+
+#u3563
+{
+	width: 120px;
+	top: 34px;
+}
+
+#u3568
+{
+	z-index: 133;
+	width: 120px;
+	margin-right: -10000px;
+}
+
+._u3568.f3s_top
+{
+	height: 23px;
+	width: 120px;
+}
+
+#pu3568:hover ._u3568.f3s_top
+{
+	height: 23px;
+	width: 120px;
+}
+
+#u3569-4
+{
+	width: 42px;
+	min-height: 13px;
+	padding-left: 2px;
+	padding-top: 4px;
+	padding-right: 2px;
+	margin-right: -10000px;
+	top: 3px;
+	left: 35px;
+}
+
+#pu3568:hover #u3569-4,#pu3568.MuseMenuActive #u3569-4
+{
+	margin-right: -10000px;
+	top: 3px;
+	left: 35px;
+}
+
+#u3573
+{
+	z-index: 142;
+	width: 120px;
+	margin-right: -10000px;
+}
+
+#pu3568.MuseMenuActive ._u3568.f3s_top,._u3573.f3s_top
+{
+	height: 23px;
+	width: 120px;
+}
+
+#pu3573:hover ._u3573.f3s_top
+{
+	height: 23px;
+	width: 120px;
+}
+
+#u3575-4
+{
+	width: 56px;
+	min-height: 13px;
+	padding-left: 2px;
+	padding-top: 4px;
+	padding-right: 2px;
+	margin-right: -10000px;
+	top: 3px;
+	left: 28px;
+}
+
+#pu3573:hover #u3575-4,#pu3573.MuseMenuActive #u3575-4
+{
+	margin-right: -10000px;
+	top: 3px;
+	left: 28px;
+}
+
+#u3582
+{
+	z-index: 151;
+	width: 120px;
+	margin-right: -10000px;
+}
+
+#pu3573.MuseMenuActive ._u3573.f3s_top,._u3582.f3s_top
+{
+	height: 23px;
+	width: 120px;
+}
+
+#pu3582:hover ._u3582.f3s_top
+{
+	height: 23px;
+	width: 120px;
+}
+
+#pu3582.MuseMenuActive ._u3582.f3s_top
+{
+	height: 23px;
+	width: 120px;
+}
+
+#u3585-4
+{
+	width: 28px;
+	min-height: 13px;
+	padding-left: 2px;
+	padding-top: 4px;
+	padding-right: 2px;
+	margin-right: -10000px;
+	top: 3px;
+	left: 42px;
+}
+
+#pu3582:hover #u3585-4,#pu3582.MuseMenuActive #u3585-4
+{
+	margin-right: -10000px;
+	top: 3px;
+	left: 42px;
+}
+
+#pu3568:hover #u3568,#pu3568.MuseMenuActive #u3568,#pu3573:hover #u3573,#pu3573.MuseMenuActive #u3573,#pu3582:hover #u3582,#pu3582.MuseMenuActive #u3582
+{
+	width: 120px;
+	margin-right: -10000px;
+	margin-top: 0px;
+	left: 0px;
+	margin-left: 0px;
+}
+
+#u3586
+{
+	width: 104px;
+	min-height: 34px;
+	margin-right: -10000px;
+	left: 230px;
+}
+
+#pu3609,#pu3637,#pu3559,#pu3589
+{
+	width: 0.01px;
+	position: relative;
+}
+
+#u3589
+{
+	z-index: 160;
+	width: 104px;
+	height: 34px;
+	margin-right: -10000px;
+}
+
+#pu3589:hover ._u3589.f3s_top
+{
+	height: 34px;
+	width: 104px;
+}
+
+#pu3589:active ._u3589.f3s_top
+{
+	height: 34px;
+	width: 104px;
+}
+
+#pu3589.MuseMenuActive ._u3589.f3s_top
+{
+	height: 34px;
+	width: 104px;
+}
+
+#u3591-4
+{
+	width: 83px;
+	min-height: 19px;
+	margin-right: -10000px;
+	top: 7px;
+	left: 10px;
+}
+
+#pu3637:hover #u3638-4,#pu3637:active #u3638-4,#pu3637.MuseMenuActive #u3638-4,#pu3559:hover #u3560-4,#pu3559:active #u3560-4,#pu3559.MuseMenuActive #u3560-4,#pu3589:hover #u3591-4,#pu3589:active #u3591-4,#pu3589.MuseMenuActive #u3591-4
+{
+	margin-right: -10000px;
+	top: 7px;
+	left: 10px;
+}
+
+#pu3589:hover #u3589,#pu3589:active #u3589,#pu3589.MuseMenuActive #u3589
+{
+	width: 104px;
+	margin-right: -10000px;
+	margin-top: 0px;
+	left: 0px;
+	margin-left: 0px;
+}
+
+#u3555
+{
+	z-index: 67;
+	width: 320px;
+	margin-right: -10000px;
+	margin-top: 10px;
+	left: 120px;
+}
+
+#pmenuu2554
+{
+	width: 0.01px;
+	margin-left: 28px;
+	margin-top: 11px;
+	position: relative;
+}
+
+#menuu2554
 {
 	z-index: 2;
-	width: 596px;
-	min-height: 44px;
-	line-height: 32px;
-	font-size: 27px;
-	position: relative;
+	width: 180px;
 	margin-right: -10000px;
-	margin-top: 218px;
-	left: 187px;
+	margin-top: 5px;
 }
 
-#u1039-2
+#u2595
 {
-	text-align: left;
-	font-family: Courier New, Courier, monospace;
+	width: 180px;
 }
 
-#menuu1272
+#u2596
 {
-	z-index: 7;
-	width: 446px;
-	position: relative;
-	margin-right: -10000px;
-	margin-top: 25px;
-	left: 472px;
-}
-
-#u1301
-{
-	width: 87px;
-	min-height: 34px;
-	position: relative;
+	z-index: 5;
+	width: 180px;
 	margin-right: -10000px;
 }
 
-#u1302
+._u2596.f3s_top
 {
-	width: 87px;
-	background-color: #FFFFFF;
-	padding-bottom: 17px;
-	position: relative;
+	height: 43px;
+	width: 180px;
 }
 
-#u1302:hover
+#pu2596:hover ._u2596.f3s_top
 {
-	background-color: #999999;
-	margin: 0px;
+	height: 43px;
+	width: 180px;
 }
 
-#u1302:active
+#pu2596:active ._u2596.f3s_top
 {
-	background-color: #6B6B6B;
-	margin: 0px;
+	height: 43px;
+	width: 180px;
 }
 
-#u1280
+#u2626
 {
-	width: 87px;
-	min-height: 34px;
+	z-index: 15;
+	width: 180px;
+	margin-right: -10000px;
+}
+
+#pu2596.MuseMenuActive ._u2596.f3s_top,._u2626.f3s_top
+{
+	height: 43px;
+	width: 180px;
+}
+
+#pu2626:hover ._u2626.f3s_top
+{
+	height: 43px;
+	width: 180px;
+}
+
+#pu2626:active ._u2626.f3s_top
+{
+	height: 43px;
+	width: 180px;
+}
+
+#u2619
+{
+	z-index: 25;
+	width: 180px;
+	margin-right: -10000px;
+}
+
+#pu2626.MuseMenuActive ._u2626.f3s_top,._u2619.f3s_top
+{
+	height: 43px;
+	width: 180px;
+}
+
+#pu2619:hover ._u2619.f3s_top
+{
+	height: 43px;
+	width: 180px;
+}
+
+#pu2619:active ._u2619.f3s_top
+{
+	height: 43px;
+	width: 180px;
+}
+
+#u2623,#u2616,#u2609
+{
+	width: 180px;
+	margin-top: 2px;
+}
+
+#pu3631,#pu3619,#pu3624,#pu3568,#pu3573,#pu3582,#pu2596,#pu2626,#pu2619,#pu2612
+{
+	width: 0.01px;
 	position: relative;
 	margin-right: -10000px;
-	left: 89px;
 }
 
-#u1281
+#u2612
 {
-	width: 87px;
-	background-color: #FFFFFF;
-	padding-bottom: 17px;
-	position: relative;
+	z-index: 35;
+	width: 180px;
+	margin-right: -10000px;
 }
 
-#u1302.MuseMenuActive,#u1281:hover
+#pu2619.MuseMenuActive ._u2619.f3s_top,._u2612.f3s_top
 {
-	background-color: #999999;
-	margin: 0px;
+	height: 43px;
+	width: 180px;
 }
 
-#u1303-4,#u1282-4
+#pu2612:hover ._u2612.f3s_top
 {
-	width: 87px;
+	height: 43px;
+	width: 180px;
+}
+
+#pu2612:active ._u2612.f3s_top
+{
+	height: 43px;
+	width: 180px;
+}
+
+#pu2612.MuseMenuActive ._u2612.f3s_top
+{
+	height: 43px;
+	width: 180px;
+}
+
+#u2598-4,#u2628-4,#u2621-4,#u2614-4
+{
+	width: 180px;
 	min-height: 17px;
-	text-align: center;
+	margin-right: -10000px;
+	top: 13px;
+}
+
+#pu2596:hover #u2598-4,#pu2596:active #u2598-4,#pu2596.MuseMenuActive #u2598-4,#pu2626:hover #u2628-4,#pu2626:active #u2628-4,#pu2626.MuseMenuActive #u2628-4,#pu2619:hover #u2621-4,#pu2619:active #u2621-4,#pu2619.MuseMenuActive #u2621-4,#pu2612:hover #u2614-4,#pu2612:active #u2614-4,#pu2612.MuseMenuActive #u2614-4
+{
+	margin-right: -10000px;
+	top: 13px;
+	left: 0px;
+}
+
+#pu2596:hover #u2596,#pu2596:active #u2596,#pu2596.MuseMenuActive #u2596,#pu2626:hover #u2626,#pu2626:active #u2626,#pu2626.MuseMenuActive #u2626,#pu2619:hover #u2619,#pu2619:active #u2619,#pu2619.MuseMenuActive #u2619,#pu2612:hover #u2612,#pu2612:active #u2612,#pu2612.MuseMenuActive #u2612
+{
+	width: 180px;
+	margin-right: -10000px;
+	margin-top: 0px;
+	left: 0px;
+	margin-left: 0px;
+}
+
+#u2610
+{
+	width: 120px;
+	left: 180px;
+}
+
+#u2631
+{
+	width: 118px;
+	padding-bottom: 4px;
+	margin-right: -10000px;
+}
+
+#u2631:hover
+{
+	width: 118px;
+	min-height: 0px;
+	margin: 0px -10000px 0px 0px;
+}
+
+#u2659
+{
+	width: 118px;
+	padding-bottom: 4px;
+	margin-right: -10000px;
+}
+
+#u2631.MuseMenuActive,#u2659:hover
+{
+	width: 118px;
+	min-height: 0px;
+	margin: 0px -10000px 0px 0px;
+}
+
+#u3564,#u3565,#u3572,#u3579,#u2611,#u2630,#u2658,#u2651
+{
+	width: 120px;
+}
+
+#u2652
+{
+	width: 118px;
+	padding-bottom: 4px;
+	margin-right: -10000px;
+}
+
+#u2659.MuseMenuActive,#u2652:hover
+{
+	width: 118px;
+	min-height: 0px;
+	margin: 0px -10000px 0px 0px;
+}
+
+#u2652.MuseMenuActive
+{
+	width: 118px;
+	min-height: 0px;
+	margin: 0px -10000px 0px 0px;
+}
+
+#u2633-4,#u2662-4,#u2655-4
+{
+	width: 110px;
+	min-height: 13px;
+	padding-left: 2px;
+	padding-top: 4px;
+	padding-right: 2px;
+	margin-right: -10000px;
+	top: 2px;
+	left: 2px;
+}
+
+#pu2785-4
+{
+	width: 0.01px;
+	padding-bottom: 0px;
+	margin-bottom: -2px;
+	position: relative;
+	margin-right: -10000px;
+	left: 275px;
+}
+
+#u2785-4
+{
+	z-index: 191;
+	width: 234px;
+	min-height: 48px;
+	line-height: 29px;
+	font-size: 24px;
+	position: relative;
+}
+
+#u2786
+{
+	z-index: 195;
+	width: 344px;
+	border-width: 2px;
+	border-style: solid;
+	border-color: #000000;
+	background-color: transparent;
+	margin-left: 76px;
+	margin-top: 9px;
+	position: relative;
+}
+
+#u2786_img
+{
+	padding-right: 1px;
+}
+
+#u2784-23
+{
+	z-index: 168;
+	width: 526px;
+	line-height: 20px;
 	color: #000000;
-	font-family: Helvetica, Helvetica Neue, Arial, sans-serif;
-	position: relative;
-	margin-right: -10000px;
-	top: 8px;
-}
-
-#u1287
-{
-	width: 88px;
-	min-height: 34px;
-	position: relative;
-	margin-right: -10000px;
-	left: 178px;
-}
-
-#u1288
-{
-	width: 88px;
-	background-color: #FFFFFF;
-	padding-bottom: 17px;
+	margin-left: 303px;
+	margin-top: 60px;
 	position: relative;
 }
 
-#u1288:hover
+#u2784-2
 {
-	background-color: #999999;
-	margin: 0px;
+	font-family: Verdana, Tahoma, Geneva, sans-serif;
 }
 
-#u1281:active,#u1288:active
+#u2784-3,#u2784-4
 {
-	background-color: #6B6B6B;
-	margin: 0px;
+	font-family: Georgia, Palatino, Palatino Linotype, Times, Times New Roman, serif;
 }
 
-#u1294
+#u2784-6,#u2784-9,#u2784-11,#u2784-13,#u2784-15,#u2784-17,#u2784-19,#u2784-21
 {
-	width: 88px;
-	min-height: 34px;
-	position: relative;
-	margin-right: -10000px;
-	left: 268px;
+	font-family: Verdana, Tahoma, Geneva, sans-serif;
+	font-weight: bold;
 }
 
-#u1295
+#u3921-3
 {
-	width: 88px;
-	background-color: #FFFFFF;
-	padding-bottom: 17px;
+	z-index: 197;
+	width: 5px;
+	margin-left: 258px;
+	margin-top: 17px;
 	position: relative;
 }
 
-#u1288.MuseMenuActive,#u1295:hover
+#u3922-4
 {
-	background-color: #999999;
-	margin: 0px;
-}
-
-#u1295:active
-{
-	background-color: #6B6B6B;
-	margin: 0px;
-}
-
-#u1273
-{
-	width: 88px;
-	min-height: 34px;
-	position: relative;
-	margin-right: -10000px;
-	left: 358px;
-}
-
-#u1274
-{
-	width: 88px;
-	background-color: #FFFFFF;
-	padding-bottom: 17px;
+	z-index: 200;
+	width: 132px;
+	min-height: 39px;
+	line-height: 29px;
+	font-size: 24px;
+	margin-left: 272px;
+	margin-top: 1px;
 	position: relative;
 }
 
-#u1295.MuseMenuActive,#u1274:hover
+#u3930
 {
-	background-color: #999999;
-	margin: 0px;
+	z-index: 233;
+	width: 473px;
+	margin-left: 321px;
+	position: relative;
 }
 
-#u1274:active
+#u3923-29
 {
-	background-color: #6B6B6B;
-	margin: 0px;
-}
-
-#u1274.MuseMenuActive
-{
-	background-color: #999999;
-	margin: 0px;
-}
-
-#u1290-4,#u1296-4,#u1275-4
-{
-	width: 88px;
-	min-height: 17px;
-	text-align: center;
+	z-index: 204;
+	width: 526px;
+	min-height: 257px;
+	line-height: 20px;
 	color: #000000;
-	font-family: Helvetica, Helvetica Neue, Arial, sans-serif;
+	font-size: 14px;
+	font-family: Verdana, Tahoma, Geneva, sans-serif;
+	margin-left: 303px;
+	margin-top: 55px;
 	position: relative;
-	margin-right: -10000px;
-	top: 8px;
 }
 
-.MenuItem /* unifiedNavBar */
+#u3923-5
 {
-	cursor: pointer;
+	font-weight: bold;
+}
+
+#u2784-8,#u2784-10,#u2784-12,#u2784-14,#u2784-16,#u2784-18,#u2784-20,#u3923-2,#u3923-3,#u3923-7,#u3923-9,#u3923-11,#u3923-13,#u3923-15,#u3923-17,#u3923-19,#u3923-21,#u3923-23,#u3923-25,#u3923-27
+{
+	font-weight: normal;
 }
 
 body
 {
-	padding-top: 36px;
+	padding-top: 35px;
 	padding-bottom: 36px;
 }
 
 #page .verticalspacer
 {
 	clear: both;
-	margin-bottom: -25px;
 }
 
